# web-hw-1

./: .env.example  .gitignore  README.md  pyproject.toml
src/blog/: main.py
src/blog/api/routers/: __init__.py  auth.py  posts.py  users.py
src/blog/application/: config.py
src/blog/application/dto/: tokens.py  users.py
src/blog/application/exceptions/: auth.py  user.py
src/blog/application/routers/: __init__.py  users.py
src/blog/application/services/: auth_service.py  user_service.py
src/blog/domain/entities/: base_model.py  post.py  user.py
src/blog/domain/exceptions/: auth.py  user.py
src/blog/domain/repositories/: abc_repo.py
src/blog/domain/services/: auth_service.py  post_service.py  user_service.py
src/blog/domain/value_objects/: auth_payload.py  tokens.py
src/blog/infra/: config.py  container.py
src/blog/infra/gateways/: database.py  interfaces.py
src/blog/infra/providers/: interfaces.py  jwt.py
src/blog/infra/repositories/: database_repository.py
src/blog/middlewares/: auth_middleware.py
src/blog/presentation/dto/: posts.py  users.py
src/blog/presentation/routers/: __init__.py  auth.py  posts.py  users.py
