[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ksenia", email = "kseniatravnikova@duck.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
blog = "blog:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
