[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ksenia", email = "kseniatravnikova@duck.com" }
]
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "jamlib>=2.2.5",
    "litestar>=2.17.0",
    "punq>=0.7.0",
    "pymongo>=4.15.1",
    "uvicorn>=0.37.0",
]

[project.scripts]
blog = "blog:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.ruff]
target-version = "py39"
line-length = 80
